[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
futures = { version = "0.3.31", default-features = false }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
